--- a/app/docs/_content/deployment/environment.mdx
+++ b/app/docs/_content/deployment/environment.mdx
@@ -2,8 +2,6 @@
 
 This document explains how to configure Guardrails across different environments, from local development to production.
 
-
-
 ## Supported environments
 
 Guardrails is designed to run consistently across:
@@ -14,8 +12,6 @@ Guardrails is designed to run consistently across:
 - Serverless platforms
 - Containerized infrastructure
 
-
-
 ## Required environment variables
 
 At minimum, the following environment variables must be configured:
@@ -23,7 +19,7 @@ At minimum, the following environment variables must be configured:
 ```bash
 GUARDRAILS_API_KEY=gr_live_xxxxxxxxx
 GUARDRAILS_BASE_URL=https://api.guardrails.dev
-````
+```
 
 ### Optional variables
 
@@ -33,25 +29,21 @@ GUARDRAILS_RETRIES=0
 GUARDRAILS_LOG_LEVEL=info
 ```
 
-
-
 ## Environment separation
 
 Always use **separate API keys per environment**:
 
 | Environment | Key prefix  |
-| -- | -- |
+| ----------- | ----------- |
 | Development | `gr_dev_`   |
 | Staging     | `gr_stage_` |
 | Production  | `gr_live_`  |
 
 This ensures:
 
-* Isolation of analytics
-* Safer experimentation
-* Clear audit trails
-
-
+- Isolation of analytics
+- Safer experimentation
+- Clear audit trails
 
 ## Local development
 
@@ -63,15 +55,13 @@ cp .env.example .env.local
 
 Never commit `.env.local` to source control.
 
-
-
 ## CI/CD usage
 
 In CI pipelines:
 
-* Store secrets in the CI secret manager
-* Inject variables at runtime
-* Never hardcode keys in config files
+- Store secrets in the CI secret manager
+- Inject variables at runtime
+- Never hardcode keys in config files
 
 Example (GitHub Actions):
 
@@ -80,16 +70,11 @@ env:
   GUARDRAILS_API_KEY: ${{ secrets.GUARDRAILS_API_KEY }}
 ```
 
-
-
 ## Validation
 
 To verify your setup, run a simple validation request and ensure it returns a success response.
 
-
-
 ## Next steps
 
-* Learn how Guardrails enforces security → **Security**
-* Prepare for scale → **Scaling**
-
+- Learn how Guardrails enforces security → **Security**
+- Prepare for scale → **Scaling**
