--- a/app/docs/_content/getting-started/installation.mdx
+++ b/app/docs/_content/getting-started/installation.mdx
@@ -4,8 +4,6 @@ This guide walks you through installing **Guardrails** in your application using
 
 Guardrails is designed to work with **any language, framework, or LLM provider**.
 
-
-
 ## Installation options
 
 You can integrate Guardrails in three ways:
@@ -14,21 +12,17 @@ You can integrate Guardrails in three ways:
 2. **REST API** – Language-agnostic
 3. **Self-hosted engine** – Advanced / enterprise use cases
 
-
-
 ## Install via npm (SDK)
 
 ```bash
 npm install @aayushgid/guardrailz-sdk
-````
+```
 
 Or with Yarn:
 
 ```bash
 yarn add @aayushgid/guardrailz-sdk
 ```
-
-
 
 ## Install via CDN (browser usage)
 
@@ -37,8 +31,6 @@ yarn add @aayushgid/guardrailz-sdk
 ```
 
 This exposes a global `Guardrails` object.
-
-
 
 ## Environment variables
 
@@ -50,8 +42,6 @@ GUARDRAILS_BASE_URL=https://api.guardrails.dev
 ```
 
 > Never expose your API key in client-side code.
-
-
 
 ## Verify installation
 
@@ -72,9 +62,7 @@ await client.validate({
 
 If this runs without errors, Guardrails is installed correctly.
 
-
-
 ## Next steps
 
-* Learn how to run your first guardrail → **Quickstart**
-* Explore profiles and policies → **Core Concepts**
+- Learn how to run your first guardrail → **Quickstart**
+- Explore profiles and policies → **Core Concepts**
