--- a/app/docs/_content/profiles/custom.mdx
+++ b/app/docs/_content/profiles/custom.mdx
@@ -4,8 +4,6 @@ Custom profiles allow you to define **your own guardrail policies** tailored to 
 
 They are ideal when built-in profiles are not sufficient for your needs.
 
-
-
 ## What can be customized
 
 With custom profiles, you can:
@@ -14,8 +12,6 @@ With custom profiles, you can:
 - Configure each guardrail independently
 - Combine input, output, and tool guardrails
 - Evolve policies without code changes
-
-
 
 ## Creating a custom profile
 
@@ -31,8 +27,6 @@ A profile definition typically includes:
 - Guardrails grouped by execution phase
 - Optional configuration per guardrail
 
-
-
 ## Example (conceptual)
 
 ```json
@@ -42,42 +36,33 @@ A profile definition typically includes:
     { "name": "InputSize", "config": { "maxChars": 30000 } },
     { "name": "SecretsInInput", "config": { "severity": "critical" } }
   ],
-  "outputGuardrails": [
-    { "name": "OutputPIIRedaction" }
-  ]
+  "outputGuardrails": [{ "name": "OutputPIIRedaction" }]
 }
-````
-
-
+```
 
 ## Versioning and evolution
 
 Custom profiles can be:
 
-* Updated over time
-* Duplicated
-* Archived
+- Updated over time
+- Duplicated
+- Archived
 
 Guardrails ensures:
 
-* Backward compatibility
-* Safe rollout of changes
-* Analytics visibility per profile
-
-
+- Backward compatibility
+- Safe rollout of changes
+- Analytics visibility per profile
 
 ## Runtime selection
 
 Profiles are selected at runtime using:
 
-* `profileName`
-* `profileId`
+- `profileName`
+- `profileId`
 
 This allows dynamic policy enforcement per request or API key.
 
-
-
 ## Next steps
 
-* Learn how profiles are compiled → **Profile Compilation**
-
+- Learn how profiles are compiled → **Profile Compilation**
