--- a/app/docs/_content/api/analytics.mdx
+++ b/app/docs/_content/api/analytics.mdx
@@ -4,15 +4,13 @@ The Analytics API provides **visibility into guardrail execution**, performance,
 
 It enables monitoring, auditing, and optimization of AI safety systems.
 
-
-
 ## Overview Metrics
 
-````http
+```http
 
 GET /api/analytics?range=7d
 
-````
+```
 
 ### Response
 
@@ -24,53 +22,43 @@ GET /api/analytics?range=7d
     "avgExecutionTime": 38
   }
 }
-````
-
-
+```
 
 ## Supported Ranges
 
-* `24h`
-* `7d`
-* `30d`
-* `90d`
-
-
+- `24h`
+- `7d`
+- `30d`
+- `90d`
 
 ## Guardrail Performance
 
 Metrics include:
 
-* Execution count per guardrail
-* Failure rate
-* Average latency
-* Most frequent violations
-
-
+- Execution count per guardrail
+- Failure rate
+- Average latency
+- Most frequent violations
 
 ## Use Cases
 
-* Detect prompt injection attempts
-* Identify slow or noisy guardrails
-* Monitor compliance trends
-* Audit user behavior
-
-
+- Detect prompt injection attempts
+- Identify slow or noisy guardrails
+- Monitor compliance trends
+- Audit user behavior
 
 ## Data Model
 
 Each analytics event includes:
 
-* User ID
-* API key (optional)
-* Profile ID
-* Guardrail results
-* Execution metadata
-
-
+- User ID
+- API key (optional)
+- Profile ID
+- Guardrail results
+- Execution metadata
 
 ## Notes
 
-* Analytics data is **append-only**
-* Designed for high-volume workloads
-* Safe for regulated environments
+- Analytics data is **append-only**
+- Designed for high-volume workloads
+- Safe for regulated environments
