--- a/app/docs/_content/api/profiles.mdx
+++ b/app/docs/_content/api/profiles.mdx
@@ -4,15 +4,13 @@ Profiles define **guardrail policies** that control how validation is performed.
 
 They allow guardrails to be reused, versioned, and managed independently of code.
 
-
-
 ## List Profiles
 
-````http
+```http
 
 GET /api/profiles
 
-````
+```
 
 Returns all profiles available to the authenticated user.
 
@@ -29,9 +27,7 @@ Returns all profiles available to the authenticated user.
     }
   ]
 }
-````
-
-
+```
 
 ## Create Profile
 
@@ -45,33 +41,27 @@ POST /api/profiles
 {
   "name": "strict-security",
   "description": "High security profile",
-  "inputGuardrails": [
-    { "name": "SecretsInInput", "config": { "severity": "critical" } }
-  ],
+  "inputGuardrails": [{ "name": "SecretsInInput", "config": { "severity": "critical" } }],
   "outputGuardrails": [],
   "toolGuardrails": []
 }
 ```
 
-
-
 ## Built-in Profiles
 
 Guardrails ships with curated profiles such as:
 
-* `default`
-* `enterprise_security`
-* `child_safety`
-* `healthcare`
-* `financial`
-* `minimal`
+- `default`
+- `enterprise_security`
+- `child_safety`
+- `healthcare`
+- `financial`
+- `minimal`
 
 These are automatically initialized per user.
 
-
-
 ## Best Practices
 
-* Use **built-in profiles** as a starting point
-* Clone and customize for application-specific needs
-* Avoid frequent profile changes in production
+- Use **built-in profiles** as a starting point
+- Clone and customize for application-specific needs
+- Avoid frequent profile changes in production
