--- a/app/docs/_content/api/validate.mdx
+++ b/app/docs/_content/api/validate.mdx
@@ -4,17 +4,13 @@ The **Validate API** is the core runtime endpoint used to execute guardrails aga
 
 It evaluates content using a selected **profile**, applies configured guardrails, and returns structured enforcement results.
 
-
-
 ## Endpoint
 
 ```http
 
 POST /api/validate
 
-````
-
-
+```
 
 ## Request Body
 
@@ -24,9 +20,10 @@ POST /api/validate
   "profileName": "default",
   "validationType": "input"
 }
-````
+```
 
 ### Fields
+
 ```
 | Field            | Type                   | Required  |  Description                      |
 | -                | -                      | --        | --                                |
@@ -34,7 +31,6 @@ POST /api/validate
 | `profileName`    | string                 | True        | Guardrail profile to apply       |
 | `validationType` | `"input"` | `"output"` | True        | Validation phase                 |
 ```
-
 
 ## Response
 
@@ -54,15 +50,11 @@ POST /api/validate
 }
 ```
 
-
-
 ## Behavior
 
-* Guardrails execute **in order**
-* Execution stops early for **blocking** failures
-* All executions are **tracked for analytics**
-
-
+- Guardrails execute **in order**
+- Execution stops early for **blocking** failures
+- All executions are **tracked for analytics**
 
 ## Usage via SDK
 
@@ -79,10 +71,8 @@ await client.validate({
 });
 ```
 
-
-
 ## Notes
 
-* Profiles define *which* guardrails run
-* Results include granular per-guardrail outcomes
-* Designed for low latency production use
+- Profiles define _which_ guardrails run
+- Results include granular per-guardrail outcomes
+- Designed for low latency production use
